Add MITM functionality and Guides

--- a/Games/Network_Defender/ND_frontend/index.html
+++ b/Games/Network_Defender/ND_frontend/index.html
@@ -24,11 +24,23 @@
       charset="utf-8"
     ></script>
     <script
+      src="./assets/js/classes/NetworkTutorialOverlay.js"
+      charset="utf-8"
+    ></script>
+    <script
+      src="./assets/js/classes/EncryptionGuideOverlay.js"
+      charset="utf-8"
+    ></script>
+    <script
       src="./assets/js/classes/DecryptionPuzzle.js"
       charset="utf-8"
     ></script>
     <script
       src="./assets/js/classes/EncryptionTutorial.js"
+      charset="utf-8"
+    ></script>
+    <script
+      src="./assets/js/classes/ManInTheMiddleAttack.js"
       charset="utf-8"
     ></script>
     <script
