--- a/Web-App/Cyberfort-React-App/public/Games/Network_Defender/ND_frontend/index.html
+++ b/Web-App/Cyberfort-React-App/public/Games/Network_Defender/ND_frontend/index.html
@@ -52,6 +52,18 @@
       charset="utf-8"
     ></script>
     <script src="./assets/js/classes/UiButton.js" charset="utf-8"></script>
+
+    <!-- Add new scoring system components -->
+    <script src="./assets/js/classes/ScoreManager.js" charset="utf-8"></script>
+    <script
+      src="./assets/js/classes/AchievementTracker.js"
+      charset="utf-8"
+    ></script>
+    <script
+      src="./assets/js/classes/HighScoreManager.js"
+      charset="utf-8"
+    ></script>
+
     <script src="./assets/js/scenes/BootScene.js" charset="utf-8"></script>
     <script src="assets/js/scenes/TitleScene.js" charset="utf-8"></script>
     <script src="assets/js/scenes/GameScene.js" charset="utf-8"></script>
