Add scoring functionality in Network Defender and imporve encryption backend

--- a/Web-App/Cyberfort-React-App/public/Games/Cyber_Fortress/index.html
+++ b/Web-App/Cyberfort-React-App/public/Games/Cyber_Fortress/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cyber-Fortress</title>
+    <link
+      rel="icon"
+      type="image/jpeg"
+      href="./src/assets/firewall-thumbnail.jpg"
+    />
     <style>
       body {
         margin: 0;
