Fix cyberfortress game.js

--- a/Web-App/Cyberfort-React-App/public/Games/Cyber_Fortress/index.html
+++ b/Web-App/Cyberfort-React-App/public/Games/Cyber_Fortress/index.html
@@ -48,7 +48,7 @@
 
     <!-- Game scenes -->
     <script src="src/scenes/BootScene.js"></script>
-    <script src="src/scenes/PreloadScene.js"></script>
+    <script src="src/scenes/PreLoadScene.js"></script>
     <script src="src/scenes/MenuScene.js"></script>
     <script src="src/scenes/GameScene.js"></script>
     <script src="src/scenes/LevelCompleteScene.js"></script>
